--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.0",
-    "reselect": "^4.1.2"
+    "reselect": "^4.1.2",
+    "styled-components": "^5.3.3"
   }
 }
