--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha \"src/**/*.test.js\" --require @babel/register --recursive",
     "build": "npx webpack --mode development",
     "dev": "npx webpack-dev-server --mode development"
   },
@@ -18,14 +18,20 @@
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-react": "^7.16.0",
     "babel-loader": "^8.2.3",
+    "chai": "^4.3.4",
     "css-loader": "^6.5.1",
+    "fetch-mock": "^9.11.0",
+    "mocha": "^9.1.3",
+    "node-fetch": "^2.6.0",
     "react-hot-loader": "^4.13.0",
+    "sinon": "^12.0.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.61.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.4.0"
   },
   "dependencies": {
+    "@babel/register": "^7.16.0",
     "@babel/runtime": "^7.16.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
